fixed missing text

--- a/USElection2000-2020/main.ipynb
+++ b/USElection2000-2020/main.ipynb
@@ -7,17 +7,20 @@
    "source": [
     "# US Election Analysis 2000-2020\n",
     "\n",
-    "Since its election season, I figured there's no better time than now to practice on an election result data set. My README.md file contains my source for the data, and for now I'll be interested in making Choropleth charts to do various analyses on the different measures in the data set.\n",
+    "Since its election season, I figured there's no better time than now to practice on an election result data set. My README.md file contains my source for the data, and for now I'll be interested in making Choropleth charts to do various analyses on the different measures in the data set. In the future I'll try to match this with other datasets to find correlations in analyses.\n",
     "\n",
     "## Relevant measures\n",
     "- year\n",
     "- state (state_po for the charts)\n",
-    "- county (county_fips for the"
+    "- county (county_fips for the charts)\n",
+    "- party\n",
+    "- candidatevotes\n",
+    "- totalvotes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d332afc6-81ff-41e4-8259-71a7bd9d7933",
    "metadata": {},
    "outputs": [],
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6d0c5114-3dd9-47dc-9275-87d78a3a2d76",
    "metadata": {},
    "outputs": [],
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "cdd87f87-c537-4832-8e21-d288ce136574",
    "metadata": {},
    "outputs": [
@@ -291,7 +294,7 @@
        "[72617 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
