working with aggregation

--- a/USElection2000-2020/main.ipynb
+++ b/USElection2000-2020/main.ipynb
@@ -26,23 +26,46 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from urllib.request import urlopen\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d0c5114-3dd9-47dc-9275-87d78a3a2d76",
+   "id": "0d79415f-f662-40ce-8c2c-c54403563f24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfmain = pd.read_csv('Data/main_data.csv')"
+    "with urlopen('https://raw.githubusercontent.com/plotly/datasets/master/geojson-counties-fips.json') as response:\n",
+    "    counties = json.load(response)\n",
+    "\n",
+    "election_years = [2000, 2004, 2008, 2012, 2016, 2020]\n",
+    "parties = ['DEMOCRAT', 'REPUBLICAN', 'GREEN', 'OTHER']\n",
+    "party_color = {\n",
+    "    'DEMOCRAT': 'Blues', \n",
+    "    'REPUBLICAN': 'Reds', \n",
+    "    'GREEN': 'Greens', \n",
+    "    'OTHER': 'Oranges'\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cdd87f87-c537-4832-8e21-d288ce136574",
+   "execution_count": 18,
+   "id": "6d0c5114-3dd9-47dc-9275-87d78a3a2d76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_main = pd.read_csv('Data/main_data.csv')\n",
+    "df_states = df_main.groupby(['state_po', 'year', 'party'])['candidatevotes'].sum().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1c79c27c-9ede-4d82-b786-e2a1b7cbccfb",
    "metadata": {},
    "outputs": [
     {
@@ -66,95 +89,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>state</th>\n",
        "      <th>state_po</th>\n",
-       "      <th>county_name</th>\n",
-       "      <th>county_fips</th>\n",
-       "      <th>office</th>\n",
-       "      <th>candidate</th>\n",
+       "      <th>year</th>\n",
        "      <th>party</th>\n",
        "      <th>candidatevotes</th>\n",
-       "      <th>totalvotes</th>\n",
-       "      <th>version</th>\n",
-       "      <th>mode</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>AK</td>\n",
        "      <td>2000</td>\n",
-       "      <td>ALABAMA</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>AUTAUGA</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>AL GORE</td>\n",
        "      <td>DEMOCRAT</td>\n",
-       "      <td>4942</td>\n",
-       "      <td>17208</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>79004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>AK</td>\n",
        "      <td>2000</td>\n",
-       "      <td>ALABAMA</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>AUTAUGA</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>GEORGE W. BUSH</td>\n",
-       "      <td>REPUBLICAN</td>\n",
-       "      <td>11993</td>\n",
-       "      <td>17208</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>GREEN</td>\n",
+       "      <td>28747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>AK</td>\n",
        "      <td>2000</td>\n",
-       "      <td>ALABAMA</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>AUTAUGA</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>RALPH NADER</td>\n",
-       "      <td>GREEN</td>\n",
-       "      <td>160</td>\n",
-       "      <td>17208</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>10381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>AK</td>\n",
        "      <td>2000</td>\n",
-       "      <td>ALABAMA</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>AUTAUGA</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>113</td>\n",
-       "      <td>17208</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>REPUBLICAN</td>\n",
+       "      <td>167398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>ALABAMA</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>BALDWIN</td>\n",
-       "      <td>1003.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>AL GORE</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>2004</td>\n",
        "      <td>DEMOCRAT</td>\n",
-       "      <td>13997</td>\n",
-       "      <td>56480</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>180365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -162,154 +137,162 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72612</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>WYOMING</td>\n",
+       "      <th>1036</th>\n",
        "      <td>WY</td>\n",
-       "      <td>WASHAKIE</td>\n",
-       "      <td>56043.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>DONALD J TRUMP</td>\n",
+       "      <td>2016</td>\n",
        "      <td>REPUBLICAN</td>\n",
-       "      <td>3245</td>\n",
-       "      <td>4032</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>174419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72613</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>WYOMING</td>\n",
+       "      <th>1037</th>\n",
        "      <td>WY</td>\n",
-       "      <td>WESTON</td>\n",
-       "      <td>56045.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>JOSEPH R BIDEN JR</td>\n",
+       "      <td>2020</td>\n",
        "      <td>DEMOCRAT</td>\n",
-       "      <td>360</td>\n",
-       "      <td>3560</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>73491</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72614</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>WYOMING</td>\n",
+       "      <th>1038</th>\n",
        "      <td>WY</td>\n",
-       "      <td>WESTON</td>\n",
-       "      <td>56045.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>JO JORGENSEN</td>\n",
+       "      <td>2020</td>\n",
        "      <td>LIBERTARIAN</td>\n",
-       "      <td>46</td>\n",
-       "      <td>3560</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>5768</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72615</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>WYOMING</td>\n",
+       "      <th>1039</th>\n",
        "      <td>WY</td>\n",
-       "      <td>WESTON</td>\n",
-       "      <td>56045.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
+       "      <td>2020</td>\n",
        "      <td>OTHER</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>47</td>\n",
-       "      <td>3560</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>5685</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72616</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>WYOMING</td>\n",
+       "      <th>1040</th>\n",
        "      <td>WY</td>\n",
-       "      <td>WESTON</td>\n",
-       "      <td>56045.0</td>\n",
-       "      <td>US PRESIDENT</td>\n",
-       "      <td>DONALD J TRUMP</td>\n",
+       "      <td>2020</td>\n",
        "      <td>REPUBLICAN</td>\n",
-       "      <td>3107</td>\n",
-       "      <td>3560</td>\n",
-       "      <td>20220315</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>193559</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>72617 rows × 12 columns</p>\n",
+       "<p>1041 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       year    state state_po county_name  county_fips        office  \\\n",
-       "0      2000  ALABAMA       AL     AUTAUGA       1001.0  US PRESIDENT   \n",
-       "1      2000  ALABAMA       AL     AUTAUGA       1001.0  US PRESIDENT   \n",
-       "2      2000  ALABAMA       AL     AUTAUGA       1001.0  US PRESIDENT   \n",
-       "3      2000  ALABAMA       AL     AUTAUGA       1001.0  US PRESIDENT   \n",
-       "4      2000  ALABAMA       AL     BALDWIN       1003.0  US PRESIDENT   \n",
-       "...     ...      ...      ...         ...          ...           ...   \n",
-       "72612  2020  WYOMING       WY    WASHAKIE      56043.0  US PRESIDENT   \n",
-       "72613  2020  WYOMING       WY      WESTON      56045.0  US PRESIDENT   \n",
-       "72614  2020  WYOMING       WY      WESTON      56045.0  US PRESIDENT   \n",
-       "72615  2020  WYOMING       WY      WESTON      56045.0  US PRESIDENT   \n",
-       "72616  2020  WYOMING       WY      WESTON      56045.0  US PRESIDENT   \n",
+       "     state_po  year        party  candidatevotes\n",
+       "0          AK  2000     DEMOCRAT           79004\n",
+       "1          AK  2000        GREEN           28747\n",
+       "2          AK  2000        OTHER           10381\n",
+       "3          AK  2000   REPUBLICAN          167398\n",
+       "4          AK  2004     DEMOCRAT          180365\n",
+       "...       ...   ...          ...             ...\n",
+       "1036       WY  2016   REPUBLICAN          174419\n",
+       "1037       WY  2020     DEMOCRAT           73491\n",
+       "1038       WY  2020  LIBERTARIAN            5768\n",
+       "1039       WY  2020        OTHER            5685\n",
+       "1040       WY  2020   REPUBLICAN          193559\n",
        "\n",
-       "               candidate        party  candidatevotes  totalvotes   version  \\\n",
-       "0                AL GORE     DEMOCRAT            4942       17208  20220315   \n",
-       "1         GEORGE W. BUSH   REPUBLICAN           11993       17208  20220315   \n",
-       "2            RALPH NADER        GREEN             160       17208  20220315   \n",
-       "3                  OTHER        OTHER             113       17208  20220315   \n",
-       "4                AL GORE     DEMOCRAT           13997       56480  20220315   \n",
-       "...                  ...          ...             ...         ...       ...   \n",
-       "72612     DONALD J TRUMP   REPUBLICAN            3245        4032  20220315   \n",
-       "72613  JOSEPH R BIDEN JR     DEMOCRAT             360        3560  20220315   \n",
-       "72614       JO JORGENSEN  LIBERTARIAN              46        3560  20220315   \n",
-       "72615              OTHER        OTHER              47        3560  20220315   \n",
-       "72616     DONALD J TRUMP   REPUBLICAN            3107        3560  20220315   \n",
-       "\n",
-       "        mode  \n",
-       "0      TOTAL  \n",
-       "1      TOTAL  \n",
-       "2      TOTAL  \n",
-       "3      TOTAL  \n",
-       "4      TOTAL  \n",
-       "...      ...  \n",
-       "72612  TOTAL  \n",
-       "72613  TOTAL  \n",
-       "72614  TOTAL  \n",
-       "72615  TOTAL  \n",
-       "72616  TOTAL  \n",
-       "\n",
-       "[72617 rows x 12 columns]"
+       "[1041 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfmain"
+    "df_states"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "f349599b-7dee-40e5-9586-5bdde5ab0375",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20220315])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "74c8cb2f-7fbd-46ce-81e8-2bfb3e159411",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfmain['percentage'] = dfmain['candidatevotes']/dfmain['totalvotes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "cdd87f87-c537-4832-8e21-d288ce136574",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "election1df = dfmain[dfmain['year'] == 2000]\n",
+    "election2df = dfmain[dfmain['year'] == 2004]\n",
+    "election3df = dfmain[dfmain['year'] == 2008]\n",
+    "election4df = dfmain[dfmain['year'] == 2012]\n",
+    "election5df = dfmain[dfmain['year'] == 2016]\n",
+    "election6df = dfmain[dfmain['year'] == 2020]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "3abc32d1-3c14-4e0d-b028-52eea70ed670",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "e1Ddf = election1df[election1df['party'] == 'DEMOCRAT']\n",
+    "e1Rdf = election1df[election1df['party'] == 'REPUBLICAN']\n",
+    "e1Gdf = election1df[election1df['party'] == 'GREEN']\n",
+    "e1Odf = election1df[election1df['party'] == 'OTHER']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8c63adfe-3b4e-4cb0-8e36-c0d172fe9ac7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_D = px.choropleth(e1Ddf, geojson=counties, locations='county_fips', color='percentage',\n",
+    "                           color_continuous_scale=\"Blues\",\n",
+    "                           range_color=(0, 1),\n",
+    "                           scope=\"usa\",\n",
+    "                           labels={'votes':'candidatevotes'}\n",
+    "                          )\n",
+    "fig_R = px.choropleth(e1Rdf, geojson=counties, locations='county_fips', color='percentage',\n",
+    "                           color_continuous_scale=\"Reds\",\n",
+    "                           range_color=(0, 1),\n",
+    "                           scope=\"usa\",\n",
+    "                           labels={'votes':'candidatevotes'}\n",
+    "                          )\n",
+    "fig_G = px.choropleth(e1Gdf, geojson=counties, locations='county_fips', color='percentage',\n",
+    "                           color_continuous_scale=\"Greens\",\n",
+    "                           range_color=(0, 1),\n",
+    "                           scope=\"usa\",\n",
+    "                           labels={'votes':'candidatevotes'}\n",
+    "                          )\n",
+    "fig_O = px.choropleth(e1Odf, geojson=counties, locations='county_fips', color='percentage',\n",
+    "                           color_continuous_scale=\"Oranges\",\n",
+    "                           range_color=(0, 1),\n",
+    "                           scope=\"usa\",\n",
+    "                           labels={'votes':'candidatevotes'}\n",
+    "                          )"
+   ]
   }
  ],
  "metadata": {
